[tool.poetry]
name = "9 проект останій"
version = "0.1.0"
description = "я устав забувати"
authors = ["Soloway-1 <poppmikola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
